2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkTreeModelIface.t
	* xs/GtkTreeModel.xs: Fix the stack handling in the xsub for
	gtk_tree_model_get.  We need to call SPAGAIN before and PUTBACK
	after code that modifies the local stack pointer (PUSHs and XPUSHs
	for example).  Patch by Kevin Ryde.

2008-08-23  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/PangoLayout.xs: Fix a leak in the wrapper of
	pango_layout_line_get_x_ranges.  Patch by Kevin Ryde.

2008-08-17  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkItemFactory.t: Fix test failures.

	* xs/GtkWindow.xs: Fix small error in the description POD section.
	Patch by Kevin Ryde.

	* t/GtkSocket-GtkPlug.t
	* xs/GtkPlug.xs: Fix the gtk_plug_new_for_display wrapper so it is
	callable as Gtk2::Plug->new_for_display(display, socket_id).  For
	backwards compatibility, also allow
	Gtk2::Plug::new_for_display(display, socket_id).

2008-08-07  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* t/GtkBuilder.t: Merge the UI definitions and, more importantly,
	make it work correctly with newer gtk+.

2008-08-03  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	Merge from HEAD:

	* xs/GtkTreeModel.xs (gtk2perl_tree_model_rows_reordered_marshal)
	* t/GtkTreeModelIface.t: Fix marshaling of the rows-reordered
	signal for custom Perl tree models.  Patch by Kevin Ryde.

	* xs/GtkAboutDialog.xs: Don't define macros inside a MODULE
	section.  Older xsubpp can't handle that.

	* xs/GtkDialog.xs: Add documentation about closing dialogs, and
	mention that class closures for the response signal receive
	unconverted response ids.  Patch by Kevin Ryde.

	* xs/GtkWindow.xs: Add a couple of words about the delete-event
	signal and its relation to window destruction and hidden windows.
	Patch by Kevin Ryde.

	* xs/GtkTreeModel.xs: Document that class closures in Perl
	subclasses for the rows-reordered signal receive an incorrect