@@ -1,3 +1,10 @@
+2008-09-06  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	Merge from HEAD:
+
+	* t/GdkPixbuf.t: If saving a pixbuf in 'jpeg' format is not
+	supported, try 'png'.  Patch by Flavio Poletti.  (RT #37135)
+
 2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	Merge from HEAD:
